<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:id="@+id/school_details"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginVertical="@dimen/activity_vertical_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/school_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Base.TextAppearance.Material3.LabelLarge"
            tools:text="School Name"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <include layout="@layout/property_tag"
                android:id="@+id/is_accessible"
                android:visibility="gone"
                tools:visibility="visible"
                />
            <include layout="@layout/property_tag"
                android:id="@+id/high_school"
                android:visibility="gone"
                tools:visibility="visible"
                />
            <include layout="@layout/property_tag"
                android:id="@+id/international"
                android:visibility="gone"
                tools:visibility="visible"/>
        </LinearLayout>


        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/text_padding_vertical_large"
            style="@style/TextAppearance.Material3.BodySmall"
            tools:text="School Description"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/text_padding_medium"
            android:text="@string/phone_number"
            style="@style/Base.TextAppearance.Material3.LabelMedium"
            />
        <TextView
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/text_padding_medium"
            style="@style/TextAppearance.Material3.BodySmall"
            tools:text="Phone Number"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/text_padding_medium"
            android:text="@string/address"
            style="@style/Base.TextAppearance.Material3.LabelMedium"
            />
        <TextView
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/text_padding_medium"
            style="@style/TextAppearance.Material3.BodySmall"
            tools:text="Address"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/text_padding_vertical_large"
            style="@style/Base.TextAppearance.Material3.LabelLarge"
            android:text="@string/sat_scores"
            />

        <TextView
            android:id="@+id/sat_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            style="@style/Base.TextAppearance.Material3.LabelSmall"
            tools:text="Total #"
            tools:visibility="visible"
            />
        <LinearLayout
            android:id="@+id/sat_total"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/text_padding_medium"
            android:orientation="horizontal"
            tools:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Base.TextAppearance.Material3.LabelSmall"
                android:text="@string/number_of_test_takers"
                tools:text="Total #"
                />

            <TextView
                android:id="@+id/num_of_sat_test_takers_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Base.TextAppearance.Material3.LabelSmall"
                tools:text="SAT Score"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/sat_reading"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/text_padding_medium"
            android:orientation="horizontal"
            tools:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Base.TextAppearance.Material3.LabelSmall"
                android:text="@string/critical_reading_avg_score"
                tools:text="Score #"
                />

            <TextView
                android:id="@+id/sat_critical_reading_avg_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Base.TextAppearance.Material3.LabelSmall"
                tools:text="SAT Score"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/sat_math"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/text_padding_medium"
            android:orientation="horizontal"
            tools:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Base.TextAppearance.Material3.LabelSmall"
                android:text="@string/math_avg_score"
                tools:text="Score #"
                />

            <TextView
                android:id="@+id/sat_math_avg_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Base.TextAppearance.Material3.LabelSmall"
                tools:text="SAT Score"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/sat_writing"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/text_padding_medium"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/text_padding_vertical_large"
            tools:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Base.TextAppearance.Material3.LabelSmall"
                android:text="@string/writing_avg_score"
                tools:text="Score #"
                />

            <TextView
                android:id="@+id/sat_writing_avg_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Base.TextAppearance.Material3.LabelSmall"
                tools:text="SAT Score"
                />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>